--- a/mychat/package.json
+++ b/mychat/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "emoji-picker-react": "^4.12.2",
+    "firebase": "^11.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
